fix: improve security, scheduler performance and test alignment